welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()){
	setCouleurBrosse(c:lightGray);
	baisseBrosse();
	avance();
}
